crates/toml_edit/tests/snapshots/invalid/string/multiline-lit-no-close-01.stderr
TOML parse error at line 2, column 20
  |
2 |     this will fail
  |                    ^
invalid multi-line literal string, expected `'`
